# solores

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  install-precommit.sh
examples/: Cargo.toml  README.md
examples/anchor/drift/: Cargo.toml  README.md  idl.json
examples/anchor/drift/drift_client_consumer/: Cargo.toml
examples/anchor/drift/drift_interface/: Cargo.toml
examples/anchor/drift/drift_interface/src/: accounts.rs  errors.rs  events.rs  instructions.rs  lib.rs  typedefs.rs
examples/anchor/ix_blank/: idl.json
examples/anchor/ix_blank/anchor_ix_blank_interface/: Cargo.toml
examples/anchor/ix_no_accounts/: idl.json
examples/anchor/ix_no_accounts/anchor_ix_no_accounts_interface/: Cargo.toml
examples/anchor/ix_no_accounts_pubkey_arg/: idl.json
examples/anchor/ix_no_accounts_pubkey_arg/anchor_ix_no_accounts_pubkey_arg_interface/: Cargo.toml
examples/anchor/ix_no_args/: idl.json
examples/anchor/ix_no_args/anchor_ix_no_args_interface/: Cargo.toml
examples/anchor/ix_no_privilege/: idl.json
examples/anchor/ix_no_privilege/anchor_ix_no_privilege_interface/: Cargo.toml
examples/anchor/marinade/: Cargo.toml  README.md  idl.json
examples/anchor/marinade/marinade_finance_client_consumer/: Cargo.toml  README.md
examples/anchor/marinade/marinade_finance_client_consumer/src/: lib.rs
examples/anchor/marinade/marinade_finance_client_consumer/tests/: test-read-state.rs  test-serde.rs
examples/anchor/marinade/marinade_finance_interface/: Cargo.toml
examples/anchor/unstake-it/: Cargo.toml
examples/anchor/unstake-it/unstake_client_consumer/: Cargo.toml
examples/anchor/unstake-it/unstake_interface/: Cargo.toml
examples/anchor/unstake-it/unstake_interface/src/: lib.rs  (+4 more)
examples/anchor/unstake-it/unstake_onchain_consumer/: Cargo.toml
examples/anchor/unstake-it/unstake_onchain_consumer/src/: entrypoint.rs
examples/anchor/unstake_it/: idl.json
examples/anchor/unstake_it/unstake_client_consumer/: Cargo.toml
examples/anchor/unstake_it/unstake_interface/: Cargo.toml
examples/anchor/unstake_it/unstake_interface/src/: accounts.rs  errors.rs  instructions.rs  typedefs.rs
examples/anchor/unstake_it/unstake_onchain_consumer/: Cargo.toml
examples/anchor/unstake_it/unstake_onchain_consumer/src/: entrypoint.rs  lib.rs
examples/bincode/stake/: idl.json
examples/bincode/stake/stake_program_client/: Cargo.toml
examples/bincode/stake/stake_program_interface/: Cargo.toml
examples/bincode/system/: idl.json
examples/bincode/system/system_program_client/: Cargo.toml
examples/bincode/system/system_program_interface/: Cargo.toml
examples/fake/: README.md
examples/fake/fake-token-consumer/: Cargo.toml
examples/fake/fake-token-consumer/src/: entrypoint.rs  lib.rs
examples/fake/fake_token_interface/: Cargo.toml
examples/fake/fake_token_interface/src/: accounts.rs  instructions.rs  lib.rs  typedefs.rs
examples/shank/ix_blank/: idl.json
examples/shank/ix_blank/shank_ix_blank_interface/: Cargo.toml
examples/shank/ix_no_accounts/: idl.json
examples/shank/ix_no_accounts/shank_ix_no_accounts_interface/: Cargo.toml
examples/shank/ix_no_accounts_pubkey_arg/: idl.json
examples/shank/ix_no_accounts_pubkey_arg/shank_ix_no_accounts_pubkey_arg_interface/: Cargo.toml
examples/shank/ix_no_accounts_pubkey_arg/shank_ix_no_accounts_pubkey_arg_interface/src/: instructions.rs
examples/shank/ix_no_args/: idl.json
examples/shank/ix_no_args/shank_ix_no_args_interface/: Cargo.toml
examples/shank/ix_no_privilege/: idl.json
examples/shank/ix_no_privilege/shank_ix_no_privilege_interface/: Cargo.toml
examples/shank/phoenix_v1/: Cargo.toml  README.md  idl.json
examples/shank/phoenix_v1/phoenix_v1_interface/: Cargo.toml
examples/shank/phoenix_v1/phoenix_v1_interface/src/: errors.rs  instructions.rs  lib.rs  typedefs.rs
examples/shank/token-metadata/: idl.json
examples/shank/token-metadata/mpl_token_metadata_onchain_consumer/: Cargo.toml
examples/shank/token-metadata/mpl_token_metadata_onchain_consumer/src/: entrypoint.rs
examples/shank/token_metadata/: Cargo.toml
examples/shank/token_metadata/mpl_token_metadata_interface/: Cargo.toml
examples/shank/token_metadata/mpl_token_metadata_interface/src/: instructions.rs  typedefs.rs
examples/shank/token_metadata/mpl_token_metadata_onchain_consumer/: Cargo.toml
examples/shank/token_metadata/mpl_token_metadata_onchain_consumer/src/: entrypoint.rs
examples/unstake-it/: idl.json
solores/: Cargo.toml  README.md
solores/src/: lib.rs  main.rs  utils.rs  write_cargotoml.rs  write_src.rs
solores/src/idl_format/: README.md  mod.rs
solores/src/idl_format/anchor/: accounts.rs  events.rs  instructions.rs  mod.rs  typedefs.rs
solores/src/idl_format/anchor/accounts/: account.rs  mod.rs
solores/src/idl_format/anchor/errors/: mod.rs
solores/src/idl_format/anchor/events/: event.rs  mod.rs
solores/src/idl_format/anchor/instructions/: instruction.rs  mod.rs
solores/src/idl_format/anchor/typedefs/: typedef.rs
solores/src/idl_format/bincode/: mod.rs  typedefs.rs
solores/src/idl_format/bincode/errors/: error.rs
solores/src/idl_format/bincode/instructions/: instruction.rs  mod.rs
solores/src/idl_format/bincode/typedefs/: mod.rs  typedef.rs
solores/src/idl_format/shank/: accounts.rs  errors.rs  instructions.rs  mod.rs  typedefs.rs
solores/src/idl_format/shank/instructions/: instruction.rs  mod.rs
solores/src/idl_format/shank/typedefs/: mod.rs  typedef.rs
solores/src/write_src/: write_errors.rs  write_instructions.rs  write_lib.rs
solores/tests/: test_gen_and_check_examples.rs
src/: main.rs  utils.rs  write_cargotoml.rs  write_gitignore.rs  write_src_lib.rs
src/idl_format/: mod.rs
src/idl_format/anchor/: accounts.rs  instructions.rs  mod.rs  typedefs.rs
src/idl_format/shank/: instructions.rs  mod.rs  typedefs.rs
src/write_src/: mod.rs  write_accounts.rs  write_instructions.rs  write_lib.rs  write_typedefs.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: test_gen_examples.rs
(+35 files in other folders)
