[workspace]
resolver = "2"

members = [
    "examples/anchor/ix_blank/*",
    "examples/anchor/ix_no_accounts/*",
    "examples/anchor/ix_no_args/*",
    "examples/anchor/ix_no_privilege/*",
    "examples/anchor/drift/*",
    "examples/anchor/marinade/*",
    "examples/anchor/unstake_it/*",
    "examples/shank/ix_blank/*",
    "examples/shank/ix_no_accounts/*",
    "examples/shank/ix_no_args/*",
    "examples/shank/ix_no_privilege/*",
    "examples/shank/phoenix_v1/*",
    "examples/shank/token_metadata/*",
    "solores",
    "test_utils"
]

[workspace.dependencies]
borsh = "^0.10"
bs58 = ">=0.1"
bytemuck = "^1"
clap = "^4.0.29"
env_logger = "^0.10.0"
heck = "^0.4.0"
itertools = "^0.10"
lazy_static = "^1"
log = "^0.4.17"
log-panics = "^2"
num-derive = "^0.3"
num-traits = "^0.2"
prettyplease = "^0.1.21"
proc-macro2 = "^1.0"
quote = "^1.0"
serde = "^1"
serde_json = "^1"
sha2 = "^0.10"
solana-cli-config = "^1"
solana-client = "^1"
solana-program = "^1"
solana-sdk = "^1"
syn = "^1.0"
thiserror = "^1.0"
tokio = "^1"
toml = "^0.7.6"
void = "^1.0"

# workspace members
test_utils = { path = "./test_utils" }
