[workspace]
resolver = "2"

members = [
    "examples/anchor/ix_blank/*",
    "examples/anchor/ix_no_accounts/*",
    "examples/anchor/ix_no_accounts_pubkey_arg/*",
    "examples/anchor/ix_no_args/*",
    "examples/anchor/ix_no_privilege/*",
    "examples/anchor/drift/*",
    "examples/anchor/marinade/*",
    "examples/anchor/unstake_it/*",
    "examples/bincode/stake/*",
    "examples/bincode/system/*",
    "examples/shank/ix_blank/*",
    "examples/shank/ix_no_accounts/*",
    "examples/shank/ix_no_accounts_pubkey_arg/*",
    "examples/shank/ix_no_args/*",
    "examples/shank/ix_no_privilege/*",
    "examples/shank/phoenix_v1/*",
    "examples/shank/token_metadata/*",
    "solores",
    "test_utils"
]

[workspace.dependencies]
borsh = {version = "^1.5", features = ["derive"] }
bs58 = ">=0.5"
bytemuck = "^1.16"
clap = "4.5.14"
env_logger = "0.11.5"
heck = "0.5.0"
itertools = "^0.13"
lazy_static = "^1.5"
log = "0.4.22"
log-panics = "^2.1"
num-derive = "0.4.2"
num-traits = "^0.2"
prettyplease = "0.2.20"
proc-macro2 = "^1.0"
quote = "^1.0"
rand = "^0.8"
serde = "^1"
serde_json = "^1"
sha2 = "^0.10"
solana-cli-config = "^2.0"
solana-client = "^2.0"
solana-program = "^2.0"
solana-sdk = "^2.0"
syn = "^2.0"
thiserror = "^1.0"
tokio = "^1"
toml = "0.8.19"
void = "^1.0"

# workspace members
drift_interface = { path = "./examples/anchor/drift/drift_interface" }
marinade_finance_interface = { path = "./examples/anchor/marinade/marinade_finance_interface" }
mpl_token_metadata_interface = { path = "./examples/shank/token_metadata/mpl_token_metadata_interface" }
stake_program_interface = { path = "./examples/bincode/stake/stake_program_interface" }
system_program_interface = { path = "./examples/bincode/system/system_program_interface" }
test_utils = { path = "./test_utils" }
unstake_interface = { path = "./examples/anchor/unstake_it/unstake_interface" }
