[package]
name = "solores"
description = "Solana IDL to Rust client / CPI interface generator"
license = "Apache-2.0"
repository = "https://github.com/igneous-labs/solores"
version = "0.1.4"
edition = "2021"
exclude = [
    ".pre-commit-config.yaml",
    "examples/",
    "install-precommit.sh",
    "tests/test_gen_examples.rs"
]
categories = [
    "command-line-utilities",
    "cryptography::cryptocurrencies",
    "development-tools",
]
keywords = [
    "anchor",
    "codegen",
    "metaplex",
    "shank",
    "solana",
]

[lib]
name = "solores"

[[bin]]
name = "solores"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
heck = "^0.4.0"
itertools = "^0.10"
prettyplease = "0.1.21"
log = "0.4.17"
log-panics = { version = "2", features = ["with-backtrace"]}
proc-macro2 = "^1.0"
quote = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "^0.10"
syn = { version = "^1.0", features = ["full"] }
toml = "0.7.6"
void = "^1.0"

[dev-dependencies]
test_utils = { path = "../test_utils" }
