[package]
name = "fake-token-consumer"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
fake_token_interface = { path = "../fake_token_interface"}
solana-program = "1.13.4" # mainnet-beta current vers

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
