[package]
name = "drift_interface"
version = "2.31.1-beta.9"
edition = "2021"

[dependencies.borsh]
workspace = true

[dependencies.num-derive]
workspace = true

[dependencies.num-traits]
workspace = true

[dependencies.serde]
optional = true
workspace = true

[dependencies.solana-program]
workspace = true

[dependencies.thiserror]
workspace = true
