[package]
name = "unstake_onchain_consumer"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "^0.9"
solana-program = "1.13.4"
unstake_interface = { path = "../unstake_interface" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]