[package]
name = "unstake_interface"
version = "0.1.0"
edition = "2021"

[dependencies.borsh]
workspace = true

[dependencies.solana-program]
workspace = true

[dependencies.serde]
optional = true
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.num-derive]
workspace = true

[dependencies.num-traits]
workspace = true
