[package]
name = "unstake_onchain_consumer"
version = "0.1.0"
edition = "2021"
publish = false

[features]
no-entrypoint = []

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
unstake_interface = { path = "../unstake_interface" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]