[package]
name = "shank_ix_no_accounts_pubkey_arg_interface"
version = "0.0.0"
edition = "2021"

[dependencies.borsh]
workspace = true

[dependencies.bytemuck]
features = ["derive"]
workspace = true

[dependencies.serde]
optional = true
workspace = true

[dependencies.solana-program]
workspace = true
