[package]
name = "mpl_token_metadata_onchain_consumer"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "^0.9"
mpl_token_metadata_interface = { path = "../mpl_token_metadata_interface" }
solana-program = "1.13.4"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]